get api working
