# api/controllers/home.js
@@ -1,20 +1,34 @@
 'use strict';
+const _ = require('lodash');
 
 module.exports = {
-  home: home
+  game: game,
+  pickLetter: pickLetter,
 };
 
-/*
-  Functions in a127 controllers used for operations should take two parameters:
+const Hangman = require('../../game.js'); 
+let hangman = new Hangman();
 
-  Param 1: a handle to the request object
-  Param 2: a handle to the response object
- */
-function home(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
+function game(req, res) {
+    /*
+    if (hangman) {
+        console.log('empty')
+        hangman = new Hangman();
+    }
+    */
 
-  // this sends back a JSON response which is a single string
-  res.json(hello);
+    res.json({
+        secretWordChars: hangman.secretWordChars,
+        letters: hangman.letters,
+        guessesRemaining: hangman.guessesRemaining,
+        won: hangman.won,
+    });
+}
+
+function pickLetter(req, res) {
+    console.log(req)
+    const guess = req.body.guess;
+    console.log(guess)
+    hangman.handleGuess(guess);
+    res.redirect('/');
 }
