# api/swagger/swagger.yaml
@@ -1,9 +1,9 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: Hangman
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:3000
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -17,27 +17,36 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
+  - text/html
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
+  /:
+    x-swagger-router-controller: home
+    post:
+      description: Posts the letter selected by the user and triggers side effects
+      operationId: pickLetter
       parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
+      - name: body
+        in: body
+        required: true
+        schema:
           type: string
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/Game"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      description: Displays game interface
+      operationId: game
       responses:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
+            $ref: "#/definitions/Game"
         default:
           description: Error
           schema:
@@ -46,12 +55,33 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
+  Game:
+    description: The game object
+    type: object
     properties:
-      message:
-        type: string
+      secretWordChars:
+        # how can I reuse this type?
+        type: array
+        items:
+          type: object
+          properties:
+            value:
+              type: string
+            isGuessed:
+              type: boolean
+      letters:
+        type: array
+        items:
+          type: object
+          properties:
+            value:
+              type: string
+            isGuessed:
+              type: boolean
+      guessesRemaining:
+        type: integer
+      won:
+        type: boolean
   ErrorResponse:
     required:
       - message
